--- a/packages/ui/templates/menu.html
+++ b/packages/ui/templates/menu.html
@@ -4,7 +4,11 @@
         {{#each items}}
             <div class="item {{itemActiveClass}}">
                 <span class="fa fa-{{icon}}"></span>
-                <a href="{{itemPath}}"  title="{{itemTitle}}">{{title}}</a>
+                {{#if itemUrl}}
+                    <a href="#" title="{{itemTitle}}" onclick="window.open('{{itemUrl}}', '_blank')">{{title}}</a>
+                {{else}}
+                    <a href="{{itemPath}}"  title="{{itemTitle}}">{{title}}</a>
+                {{/if}}
             </div>
         {{/each}}
     </div>
