community image upload, events calendar, removed directory phones

--- a/packages/community/styles/post.less
+++ b/packages/community/styles/post.less
@@ -92,6 +92,13 @@
       resize: none;
     }
 
+    .post-images {
+      position: relative;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+    }
+
     .btns-group {
       margin-top: @post-padding;
     }
