--- a/packages/ui/styles/header.import.less
+++ b/packages/ui/styles/header.import.less
@@ -64,6 +64,10 @@
     .flex(1);
   }
 
+  .empty {
+    .flex(1);
+  }
+
   @media screen and (min-width: 40em) {
     text-align: left;
     border-radius: 0px 0px 0px 0px;
