--- a/packages/property/styles/unit.less
+++ b/packages/property/styles/unit.less
@@ -1,22 +1,22 @@
 @import "{chaindaemons:ui}/styles/main.less";
 
-@directory-margin: 10px 10px 0px 10px;
-@directory-padding: 10px;
-@directory-number-padding: 6px;
+@property-unit-margin: 10px 10px 0px 10px;
+@property-unit-padding: 10px;
+@property-unit-number-padding: 6px;
 
 .unit {
   .display(flex);
   .flex-direction(row);
   .position(relative);
   background-color: white;
-  margin: @directory-margin;
-  padding: @directory-padding;
+  margin: @property-unit-margin;
+  padding: @property-unit-padding;
   border: solid 1px @color-dark;
 
   .number {
     flex: none;
-    padding-right: @directory-number-padding;
-    margin-right: @directory-number-padding;
+    padding-right: @property-unit-number-padding;
+    margin-right: @property-unit-number-padding;
     font-weight: bold;
     border-right: 1px solid @color-dark;
   }
