progress on notifications

--- a/packages/property/templates/directory.html
+++ b/packages/property/templates/directory.html
@@ -18,7 +18,7 @@
                     <div class="users">
                         {{#each users}}
                             <div>
-                                {{firstName}} {{lastName}} <span class="fa fa-phone"></span>
+                                {{firstName}} {{lastName}}
                             </div>
                         {{/each}}
                     </div>
