--- a/packages/community/templates/new-post.html
+++ b/packages/community/templates/new-post.html
@@ -19,9 +19,9 @@
                 {{/each}}
             </div>
             <div class="btns-group">
-                <button id="cancel-new-post" class="btn-secondart">Cancel</button>
-                <button id="upload-image" class="btn-primary">Add Image</button>
-                <button type="submit" class="btn-primary">Post</button>
+                <button id="cancel-new-post" class="btn-secondart"><span class="fa fa-times"></span></button>
+                <button id="upload-image" class="btn-primary"><span class="fa fa-camera"></span></button>
+                <button type="submit" class="btn-primary"><span class="fa fa-check"></span></button>
             </div>
         </div>
     </div>
