--- a/packages/ui/styles/page.import.less
+++ b/packages/ui/styles/page.import.less
@@ -35,6 +35,11 @@
     color: @color-light;
   }
 
+  .notifications {
+    color: red;
+    font-weight: bold;
+  }
+
   @media screen and (min-width: 40em) {
     opacity: 0;
   }
