--- a/packages/ui/templates/menu.html
+++ b/packages/ui/templates/menu.html
@@ -2,8 +2,8 @@
     <img class="logo" src="/images/logo.png" />
     <div class="items-list">
         {{#each items}}
-            <div class="item {{itemActiveClass}}">
-                <div class="content">
+            <div class="item">
+                <div class="content {{itemActiveClass}}">
                     <span class="fa fa-{{icon}}"></span>
                     {{#if itemUrl}}
                         <a href="#" title="{{itemTitle}}" onclick="window.open('{{itemUrl}}', '_blank')">{{title}}</a>
@@ -11,8 +11,8 @@
                         <a href="{{itemPath}}" title="{{itemTitle}}">{{title}}</a>
                     {{/if}}
                 </div>
-                {{#if notificationCount}}
-                    <div class="bubble">{{notificationCount}}</div>
+                {{#if notificationsCount}}
+                    <div class="bubble">{{notificationsCount}}</div>
                 {{/if}}
             </div>
         {{/each}}
