--- a/packages/ui/templates/page.html
+++ b/packages/ui/templates/page.html
@@ -6,7 +6,14 @@
         </div>
 
         <div id="menu-toggle">
-            <a href="#"><span class="fa fa-bars" title="Show menu"></span></a>
+            <a href="#">
+                <span class="fa fa-bars" title="Show menu"></span>
+                <span class="notifications">
+                    {{#if notificationsCount}}
+                        {{notificationsCount}}
+                    {{/if}}
+                </span>
+            </a>
         </div>
 
         <div id="section-overlay"></div>
